--- a/template.html
+++ b/template.html
@@ -4,20 +4,10 @@
         <meta charset="UTF-8">
         <title>MPD Radio</title>
         <script src="https://unpkg.com/htmx.org@2.0.2"></script>
-        <script>
-function openDialog(name) {
-    document.getElementById(name).showModal()
-}
-function closeDialog(name) {
-    document.getElementById(name).close()
-}
-        </script>
+        <script src="static/mpd-radio.js"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
-        <style>
-.master-column {
-    grid-column: span 5;
-}
-        </style>
+        <link rel="stylesheet" href="static/mpd-radio.css">
+        <link rel="icon" type="image/x-icon" href="static/Icon.png">
     </head>
     <body>
         <main class="container">
