disconnect if no commands in a minute

--- a/template.html
+++ b/template.html
@@ -10,7 +10,7 @@
         <link rel="icon" type="image/x-icon" href="static/Icon.png">
     </head>
     <body>
-        <main class="container">
+        <main class="container-fluid">
             <h1>MPD Radio</h1>
             <h2>Player</h2>
             <fieldset class="grid">
@@ -97,5 +97,8 @@
                 </div>
             </article>
         </main>
+        <footer class="container-fluid">
+            <small><a href="https://github.com/r0b0/mpd-radio">MPD Radio</a> version {{.AppVersion}}</small>
+        </footer>
     </body>
 </html>
