--- a/template.html
+++ b/template.html
@@ -3,11 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>MPD Radio</title>
-        <script src="https://unpkg.com/htmx.org@2.0.2"></script>
+        <script src="https://unpkg.com/htmx.org@2.0.2"
+                integrity="sha256-4XRtl1nsDUPFwoRFIzOjELtf1yheusSy3Jv0TXK1qIc=" crossorigin="anonymous"></script>
         <script src="static/mpd-radio.js"></script>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2.0.6/css/pico.min.css"
+              integrity="sha256-3V/VWRr9ge4h3MEXrYXAFNw/HxncLXt9EB6grMKSdMI=" crossorigin="anonymous">
         <link rel="stylesheet" href="static/mpd-radio.css">
-        <link rel="icon" type="image/x-icon" href="static/Icon.png">
+        <link rel="icon" href="static/Icon.png">
     </head>
     <body>
         <main class="container-fluid">
